--- a/pages/20028.html
+++ b/pages/20028.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9418/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9418/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -315,19 +315,38 @@ margin-left: 0em;
 <div class='maruku_toc'>
 <ul>
 <li><a href='#definition'>Definition</a></li>
+<li><a href='#properties'>Properties</a></li>
 <li><a href='#references'>References</a></li>
 </ul>
 </div>
 
 <h2 id="definition">Definition</h2>
 
-<p>An <strong>accessible model category</strong> is a <a class="existingWikiWord" href="/nlab/show/model+structure">model structure</a> on a <a class="existingWikiWord" href="/nlab/show/locally+presentable+category">locally presentable category</a> whose two <a class="existingWikiWord" href="/nlab/show/weak+factorization+systems">weak factorization systems</a> can be realized by <a class="existingWikiWord" href="/nlab/show/functorial+factorizations">functorial factorizations</a> that are <a class="existingWikiWord" href="/nlab/show/accessible+functors">accessible functors</a>.</p>
+<p>An <strong>accessible model category</strong> is a <a class="existingWikiWord" href="/nlab/show/model+structure">model structure</a> on a <a class="existingWikiWord" href="/nlab/show/locally+presentable+category">locally presentable category</a> whose two <a class="existingWikiWord" href="/nlab/show/weak+factorization+systems">weak factorization systems</a> can be realized by <a class="existingWikiWord" href="/nlab/show/functorial+factorizations">functorial factorizations</a> that are <a class="existingWikiWord" href="/nlab/show/accessible+functors">accessible functors</a>. This implies that in fact its weak factorization systems can be enhanced to <a class="existingWikiWord" href="/nlab/show/algebraic+weak+factorization+systems">algebraic weak factorization systems</a> that are also accessible.</p>
 
-<p>This implies that in fact its weak factorization systems can be enhanced to <a class="existingWikiWord" href="/nlab/show/algebraic+weak+factorization+systems">algebraic weak factorization systems</a> that are also accessible.</p>
+<h2 id="properties">Properties</h2>
+
+<p>The following, which shows that the two definitions of accessible model category agree, is Remark 3.1.8 of <a href="#HKRS15">HKRS15</a>, which relies on Theorem 4.3 of <a href="#Rosicky17">Rosicky17</a>.</p>
+
+<p>
+<div class='num_theorem'>
+<h6>Theorem</h6>
+<p>Suppose <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>E</mi></mrow><annotation encoding="application/x-tex">E</annotation></semantics></math> is an accessible functorial factorization on a locally presentable category <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>M</mi></mrow><annotation encoding="application/x-tex">M</annotation></semantics></math>, realizing a weak factorization system. Then there is an accessible algebraic weak factorization system realizing the same weak factorization system.</p>
+</div>
+ 
+<div class='proof'>
+<h6>Proof</h6>
+<p>Let <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Coalg</mi><mo stretchy="false">(</mo><mi>L</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Coalg(L)</annotation></semantics></math> be the category of <a class="existingWikiWord" href="/nlab/show/algebra+over+an+endofunctor">coalgebras</a> for the <a class="existingWikiWord" href="/nlab/show/pointed+endofunctor">copointed endofunctor</a> of the <a class="existingWikiWord" href="/nlab/show/arrow+category">arrow category</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>M</mi> <mo>→</mo></msup></mrow><annotation encoding="application/x-tex">M^\to</annotation></semantics></math> induced by <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>E</mi></mrow><annotation encoding="application/x-tex">E</annotation></semantics></math>, i.e. morphisms equipped with a section of their <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>E</mi></mrow><annotation encoding="application/x-tex">E</annotation></semantics></math>-factorization exhibiting them as a retract of the first factor. Then <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Coalg</mi><mo stretchy="false">(</mo><mi>L</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Coalg(L)</annotation></semantics></math> is locally presentable (being complete and a <a class="existingWikiWord" href="/nlab/show/PIE+limit">PIE limit</a> construction from <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>M</mi></mrow><annotation encoding="application/x-tex">M</annotation></semantics></math>). Thus, it has a small dense subcategory <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math>. We can then apply <a class="existingWikiWord" href="/nlab/show/Garner%27s+small+object+argument">Garner's small object argument</a> to generate an algebraically-free algebraic weak factorization system from <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math>. The algebraic right-maps in this awfs are the morphisms with coherent lifting functions against <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>X</mi></mrow><annotation encoding="application/x-tex">X</annotation></semantics></math>, which by density is the same as having a coherent lifting function against all of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Coalg</mi><mo stretchy="false">(</mo><mi>L</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">Coalg(L)</annotation></semantics></math>, which is the same as being an algebra for the pointed endofunctor of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msup><mi>M</mi> <mo>→</mo></msup></mrow><annotation encoding="application/x-tex">M^\to</annotation></semantics></math> corresponding to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>E</mi></mrow><annotation encoding="application/x-tex">E</annotation></semantics></math>. Thus this is an awfs with the same right-maps, hence the same underlying weak factorization system.</p>
+</div>
+</p>
 
 <h2 id="references">References</h2>
 
 <ul>
+<li id="Rosicky17">
+<p><a class="existingWikiWord" href="/nlab/show/Jiri+Rosicky">Jiri Rosicky</a>, <em>Accessible model categories</em>, Appl Categor Struct (2017) 25: 187. <a href="https://doi.org/10.1007/s10485-015-9419-6">doi</a>, <a href="https://arxiv.org/abs/1503.05010">arxiv</a></p>
+</li>
+
 <li id="HKRS15">
 <p><a class="existingWikiWord" href="/nlab/show/Kathryn+Hess">Kathryn Hess</a>, Magdalena Kędziorek, <a class="existingWikiWord" href="/nlab/show/Emily+Riehl">Emily Riehl</a>, <a class="existingWikiWord" href="/nlab/show/Brooke+Shipley">Brooke Shipley</a>, <em>A necessary and sufficient condition for induced model structures</em> (<a href="http://arxiv.org/abs/1509.08154">arXiv:1509.08154</a>). This paper contains an error, corrected by:</p>
 </li>
@@ -346,14 +365,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January 13, 2019 at 08:57:28.
+  Last revised on January 15, 2019 at 16:26:43.
   See the <a href="https://ncatlab.org/nlab/history/accessible model category" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/accessible+model+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/accessible+model+category/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/accessible+model+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/accessible+model+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/accessible+model+category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/accessible+model+category/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/accessible+model+category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/accessible+model+category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/accessible model category/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
