--- a/pages/1241.html
+++ b/pages/1241.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1000,7 +1000,17 @@ margin-left: 0em;
 
 <h3 id="RelationToLeptoquarks">Relation to leptoquarks</h3>
 
-<p>Genrically GUT-theories predict existence of <a class="existingWikiWord" href="/nlab/show/leptoquarks">leptoquarks</a> (<a href="#MurayamaYanagida92">Murayama-Yanagida 92</a>) possibly related to the apparently observed <a class="existingWikiWord" href="/nlab/show/flavour+anomalies">flavour anomalies</a> (<a href="#BDFKFS18">BDFKFS 18</a>)</p>
+<p>Genrically GUT-theories predict existence of <a class="existingWikiWord" href="/nlab/show/leptoquarks">leptoquarks</a> (<a href="#MurayamaYanagida92">Murayama-Yanagida 92</a>) possibly related to the apparently observed</p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/flavour+anomalies">flavour anomalies</a> (<a href="#BDFKFS18">BDFKFS 18</a>)</p>
+</li>
+
+<li>
+<p><a href="anomalous+magnetic+moment#Anomalies">anomalies</a> in <span class="newWikiWord">anomaous magnetic moment<a href="/nlab/new/anomaous+magnetic+moment">?</a></span> of <a class="existingWikiWord" href="/nlab/show/muon">muon</a> and <a class="existingWikiWord" href="/nlab/show/electron">electron</a></p>
+</li>
+</ul>
 
 <h3 id="InStringPhenomenology">Occurrence in string phenomenology</h3>
 
@@ -1199,14 +1209,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January 16, 2019 at 01:58:58.
+  Last revised on January 16, 2019 at 02:52:18.
   See the <a href="https://ncatlab.org/nlab/history/GUT" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/GUT" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/GUT/36" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(36 revisions)</span> | <a href="/nlab/show/diff/GUT" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/GUT" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/GUT" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/GUT/37" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(37 revisions)</span> | <a href="/nlab/show/diff/GUT" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/GUT" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/GUT/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
