--- a/pages/10022.html
+++ b/pages/10022.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/5054/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/5054/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -1193,6 +1193,12 @@ margin-left: 0em;
 <li id="Harlow18"><a class="existingWikiWord" href="/nlab/show/Daniel+Harlow">Daniel Harlow</a>, <em>TASI Lectures on the Emergence of Bulk Physics in AdS/CFT</em> (<a href="https://arxiv.org/abs/1802.01040">arXiv:1802.01040</a>)</li>
 </ul>
 
+<p>Further debelopment of these tensor networks in</p>
+
+<ul>
+<li>Ning Bao, Geoffrey Penington, Jonathan Sorce, Aron C. Wall, <em>Beyond Toy Models: Distilling Tensor Networks in Full AdS/CFT</em> (<a href="https://arxiv.org/abs/1812.01171">arXiv:1812.01171</a>)</li>
+</ul>
+
 <p>Computation of <a class="existingWikiWord" href="/nlab/show/black+hole+entropy">black hole entropy</a> in 4d via <a class="existingWikiWord" href="/nlab/show/AdS4-CFT3+duality">AdS4-CFT3 duality</a> from <a class="existingWikiWord" href="/nlab/show/holographic+entanglement+entropy">holographic entanglement entropy</a> in the <a class="existingWikiWord" href="/nlab/show/ABJM+theory">ABJM theory</a> for the <a class="existingWikiWord" href="/nlab/show/M2-brane">M2-brane</a> is discussed in</p>
 
 <ul>
@@ -1204,14 +1210,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on January  3, 2019 at 16:42:46.
+  Last revised on January 16, 2019 at 03:17:19.
   See the <a href="https://ncatlab.org/nlab/history/holographic entanglement entropy" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/holographic+entanglement+entropy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/holographic+entanglement+entropy/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/holographic+entanglement+entropy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/holographic+entanglement+entropy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/holographic+entanglement+entropy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/holographic+entanglement+entropy/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/holographic+entanglement+entropy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/holographic+entanglement+entropy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/holographic entanglement entropy/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
